# Renovate-25557-Reproduction

./: BUILD  MODULE.bazel  README.md  maven_install.json
src/main/java/ch/vorburger/learningbazel/: Main.java
